--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,3 +12,4 @@ layout: default
     <noscript>Please enable JavaScript to view comments.</noscript>
   {% endif %}
 </article>
+<script id="dsq-count-scr" src="//https-nayonnii-github-io-about.disqus.com/count.js" async></script>
